# MAGNUM_DJANGO

./: .gitignore  pyproject.toml
real_estate_rental/: manage.py
real_estate_rental/landlord_app/: apps.py  models.py
real_estate_rental/landlord_app/migrations/: 0001_initial.py
real_estate_rental/real_estate_app/: models.py
real_estate_rental/real_estate_app/migrations/: 0001_initial.py
real_estate_rental/real_estate_rental/: asgi.py  settings.py  urls.py  wsgi.py
real_estate_rental/rental_app/: admin.py  models.py  views.py
real_estate_rental/rental_app/migrations/: 0001_initial.py  0002_review_remove_listing_description_and_more.py  0003_listing_cur_tenant_listing_landlord_and_more.py  0004_alter_listing_landlord.py
real_estate_rental/rental_app/templates/: home.html  listing_all.html  listing_detail.html  listing_list.html  reviews.html
real_estate_rental/tenant_app/: models.py
real_estate_rental/tenant_app/migrations/: 0001_initial.py
real_estate_rental/users_app/: admin.py  models.py  views.py
real_estate_rental/users_app/templates/: landlord.html  landlords.html  tenant.html
real_estate_rental/utils_app/: apps.py  models.py
real_estate_rental/utils_app/migrations/: 0001_initial.py  0002_alter_realestate_rating_alter_user_rating.py  0003_alter_user_rating.py
