[tool.poetry]
name = "final"
version = "0.1.0"
description = ""
authors = ["Sarkoxed <ss2003@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
django-extensions = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
